# helen-conquest

./: .env  .env.example  .gitignore  .shadow_report_20260404.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  ATTESTATION_BUILDERS_MVP_20260223.json  AUTONOMY_STACK_COMPLETE.md  AUTORESEARCH_CONTRACT_V1.json  AUTORESEARCH_TRANCHE_E13_E18.json  CANONICALIZATION_V1.md  CANONICALIZATION_VERSIONING.md  CANONICAL_DIALOGUE_BREAKTHROUGH.md  CANONICAL_JSON_REFACTOR_COMPLETED.md  CI_ORCHESTRATION.md  CLAIM_GRAPH_V1.md  CLAUDE.md  CODE_REVIEW_SUMMARY_20260306.md  COMPLETION_SUMMARY.md  CONQUEST_COMPLETE_INDEX.md  CONQUEST_CORSICA_PITCH_DECK.pptx  CONQUEST_CORSICA_PITCH_SPEAKER_NOTES.md  CONQUEST_DISTRICTS.md  CONQUEST_EMERGENT_CONSCIOUSNESS.md  CONQUEST_KERNEL_SPEAKS.md  CONQUEST_LAND_DECISIONS_AND_NEXT_STEPS.md  CONQUEST_LAND_GO_OR_NOGO.md  CONQUEST_LAND_MVP_IMPLEMENTATION_BLUEPRINT.md  CONQUEST_LAND_QUICKSTART.sh  CONQUEST_OBJECTIVES_SAMPLES.json  CONQUEST_PLAYTEST_RECRUITMENT_PACKAGE.md  CONQUEST_PROBE_SYSTEM.md  CONQUEST_READY_TO_PLAY.md  CONQUEST_RULES_CANONICAL.md  CONQUEST_STORYBOOK.md  CONQUEST_TERMINAL_CONSCIOUSNESS.md  CONQUEST_THREE_HOUSES_INTEGRATION.md  CONSCIOUSNESS_PROBE_IMPLEMENTATION.md  CONSCIOUSNESS_PROBE_IMPLEMENTATION_CHECKLIST.md  (+261 more)
helen_os_scaffold/: :memory:  AIRI_BRIDGE_DELIVERY.md  AIRI_INTEGRATION_GUIDE.md  CWL_V1_0_AXIOMATIC_BASIS.md  CWL_V1_0_FEDERATION_THREAT_MODEL.md  CWL_V1_0_FORMAL_SPEC.md  GENESIS-001-HELEN-CIVIC-KERNEL.json  HELEN_ARCHITECTURE_MASTER_20260306.md  HELEN_HAND_QUICKSTART.md  HELEN_OS_CANON_V1.md  HELEN_SOUL_V2_DESIGN.md  server.py  (+25 more)
(+2354 files in other folders)
