[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[project]
name = "oracle-town"
version = "1.0.0"
description = "Hierarchical Multi-Agent Governance System with Constitutional Kernel"
readme = "oracle_town/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ORACLE TOWN Team"}
]
keywords = ["multi-agent", "governance", "llm", "oracle", "chatdev"]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
llm = ["openai>=1.0", "anthropic>=0.7"]

[project.scripts]
oracle-town = "oracle_town.cli:main"

[tool.setuptools.packages.find]
include = ["oracle_town*"]
